# android-app/app/src/main/java/tallerii/stories/network/apimodels/EntityMetadata.java
@@ -1,0 +1,13 @@
+package tallerii.stories.network.apimodels;
+
+public class EntityMetadata {
+    private String version;
+
+    public String getVersion() {
+        return version;
+    }
+
+    public void setVersion(String version) {
+        this.version = version;
+    }
+}
